2019-10-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Angle/phasor notation for complex numbers

2019-10-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Bijective base-26 support
	* Improve preservation of display options from "to"-operator after mode changes

2019-10-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to use binary prefixes by default for information units
	* "b?"-syntax (unit expression prefix) for optimal binary prefix (e.g. "b?byte")
	* Improvements for '?' (optimal prefix) in conversion expression

2019-10-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved RPN support for history actions

2019-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add keyboard shortcuts for RPN stack manipulation
	* Add button for calculation of RPN stack total
	* Add context menu to RPN stack
	* Use RPN stack for values in insert function dialog and add "Apply to Stack" button

2019-09-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add RPN negate button with Ctrl+'-' shortcut
	* Negate on subtract button right-click
	* RPN "LAST x" button (for retrieval of the top stack value before the last operation)

2019-09-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when saving mode/settings (on exit) if history is empty

2019-09-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "calculate as you type" result to history after idle time (1.5 s)

2019-09-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to move selected history items to top

2019-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to automatically calculate the current expression on each change (as you type)

2019-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support "where" syntax in continious display of parsed expression

2019-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* RPN stack drag and drop

2019-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Man page
