@@ -1,3 +1,8 @@
+2019-10-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Reset calculate-as-you-type history timeout on cursor move
+	* Nicer display of floor() and ceil() in result
+
 2019-10-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Angle/phasor notation for complex numbers
